# scheming-sun

./: Cargo.toml  README.md
doc/: architecture.md  data-flow.md  readme.md  threading-approach.md
lib/sc-client/: Cargo.toml  build.rs
lib/sc-client-game/: Cargo.toml
lib/sc-client-game/src/: camera.rs  lib.rs  runtime.rs  world.rs
lib/sc-client/src/: framecounter.rs  frontend.rs  lib.rs  shader_vs.glsl  teapot.rs
lib/sc-frontend/: Cargo.toml
lib/sc-frontend/src/: framecounter.rs  frontend.rs  lib.rs  runtime.rs  shader_fs.glsl  shader_vs.glsl
lib/sc-input-data/: Cargo.toml
lib/sc-input-data/src/: lib.rs
src/: main.rs
