[package]
name = "sc-frontend"
version = "0.1.0"
authors = ["Layl <LaylConway@users.noreply.github.com>"]
build = "build.rs"

[dependencies]
cgmath = "0.11.0"
vulkano = "0.2.0"
vulkano-win = "0.2.0"
winit = "0.5.1"
sc-input-data = {path="../sc-input-data"}

[build-dependencies]
vulkano-shaders = "0.2.0"
